--- a/scripts/rccacis_station_info_api_data_pull.ipynb
+++ b/scripts/rccacis_station_info_api_data_pull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,9 @@
     "\n",
     "# Fully county list = 27053,27037,27019,27139,27123,27163,27003\n",
     "counties = \"27053,27037,27019,27139,27123,27163,27003\"\n",
+    "#counties = \"27053,27037\"\n",
     "sdate = \"2002-01-01\"\n",
+    "# sdate = \"2020-01-01\"\n",
     "edate = \"2022-05-16\"\n",
     "meta = \"name,state,sids,sid_dates,ll,elev,uid,county,climdiv,valid_daterange\"\n",
     "elems = \"maxt,mint,pcpn,snow,snwd,avgt\"\n",
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://data.rcc-acis.org/MultiStnData?county=27053,27037,27019,27139,27123,27163,27003&sdate=2002-01-01&edate=2022-05-16&meta=name,state,sids,sid_dates,ll,elev,uid,county,climdiv,valid_daterange&elems=maxt,mint,pcpn,snow,snwd,avgt&output=json'"
+       "'http://data.rcc-acis.org/MultiStnData?county=27053,27037&sdate=2020-01-01&edate=2022-05-16&meta=name,state,sids,sid_dates,ll,elev,uid,county,climdiv,valid_daterange&elems=maxt,mint,pcpn,snow,snwd,avgt&output=json'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "439"
+       "151"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
