Data cleaning and calculation, write to csv

--- a/scripts/parse_json_file.ipynb
+++ b/scripts/parse_json_file.ipynb
@@ -1233,12 +1233,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 617,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Output file (CSV\n",
-    "output_station_file = \"../Resources/station_df.csv\"\n",
+    "output_station_file = \"../Resources/station_data.csv\"\n",
     "output_station_year_file = \"../Resources/station_year_data.csv\"\n",
     "output_observation_file = \"../Resources/observation_data.csv\"\n",
     "\n",
