Added a Jupyter Notebook to call each script

--- a/scripts/parse_json_file.ipynb
+++ b/scripts/parse_json_file.ipynb
@@ -1255,9 +1255,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Add foreign keys\n",
-    "with engine.connect() as con:\n",
-    "    con.execute(\"ALTER TABLE station_yearly ADD CONSTRAINT stn_yrly_station_uid_fk FOREIGN KEY (station_uid) REFERENCES station (station_uid);\")\n",
+    "# # # Add foreign keys\n",
+    "#### not adding an FK to this reporting table since it's a reporting data, not source data\n",
+    "# with engine.connect() as con:\n",
+    "#     con.execute(\"ALTER TABLE station_yearly ADD CONSTRAINT stn_yrly_station_uid_fk FOREIGN KEY (station_uid) REFERENCES station (station_uid);\")\n",
     "\n",
     "with engine.connect() as con:\n",
     "    con.execute(\"ALTER TABLE observation ADD CONSTRAINT obs_station_uid_fk FOREIGN KEY (station_uid) REFERENCES station (station_uid);\")\n",
