updated the markdown in the file with county updates

--- a/scripts/calls_to_each_script.ipynb
+++ b/scripts/calls_to_each_script.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +79,13 @@
     "1. **mn_county_rev.csv** Lookup table for county code and county name for all Minnesota Counties\n",
     "\n",
     "**Outputs**\n",
-    "1. **CSV Files** - county_lookup.csv, county_metrics_data.csv\n",
-    "2. **PostgreSQL DB Tables/Views** - county_lookup, county_metrics"
+    "1. **CSV Files** - county_lookup.csv, county_metrics_data.csv,  county_yearly_metrics_data.csv\n",
+    "2. **PostgreSQL DB Tables/Views** - county_lookup, county_metrics, county_yearly_metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
