cleaned up comments

--- a/scripts/parse_json_file.ipynb
+++ b/scripts/parse_json_file.ipynb
@@ -949,25 +949,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#station_yearly_metrics_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df2 = station_yearly_metrics_df.loc[(station_yearly_metrics_df['station_uid'] == 40882)]\n",
-    "# df2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to PostgreSQL movie_data DB\n",
+    "# Connect to PostgreSQL last_freeze_analysis DB\n",
     "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/last_freeze_analysis\"\n",
     "\n",
     "# Create the database engine with the following line \n",
@@ -1256,10 +1237,7 @@
    "outputs": [],
    "source": [
     "# # # Add foreign keys\n",
-    "#### not adding an FK to this reporting table since it's a reporting data, not source data\n",
-    "# with engine.connect() as con:\n",
-    "#     con.execute(\"ALTER TABLE station_yearly ADD CONSTRAINT stn_yrly_station_uid_fk FOREIGN KEY (station_uid) REFERENCES station (station_uid);\")\n",
-    "\n",
+    "#### not adding an FK to reporting table since it's a reporting data, not source data\n",
     "with engine.connect() as con:\n",
     "    con.execute(\"ALTER TABLE observation ADD CONSTRAINT obs_station_uid_fk FOREIGN KEY (station_uid) REFERENCES station (station_uid);\")\n",
     "        "
