--- a/scripts/county_processing.ipynb
+++ b/scripts/county_processing.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connect to DB and create county table if it doesn't exist"
+    "### Connect to DB, create county table if it doesn't exist, load DFs with Observation & Station data"
    ]
   },
   {
@@ -72,14 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # read table data using sql query\n",
-    "# sql_string =     \"SELECT c.county_name, s.county, o.* \\\n",
-    "#         FROM observation o \\\n",
-    "#         INNER JOIN station s \\\n",
-    "#         ON s.station_uid = o.station_uid  \\\n",
-    "#         INNER JOIN county c \\\n",
-    "#         ON c.county_code = s.county\"\n",
-    "# print (sql_string)\n",
+    "# pull in observations table with county name joined data using sql query\n",
     "\n",
     "observations_df = pd.read_sql(\n",
     "    \"SELECT c.county_name, s.county, o.* \\\n",
