--- a/scripts/parse_json_file.ipynb
+++ b/scripts/parse_json_file.ipynb
@@ -248,6 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Removing the SID cleanup since we determined we didn't need the SIDS for joining to other sources at this time.\n",
     "# # create sids columns for the array sids\n",
     "# sids = []\n",
     "# sid_string = \"\"\n",
