--- a/scripts/rccacis_station_info_api_data_pull.ipynb
+++ b/scripts/rccacis_station_info_api_data_pull.ipynb
@@ -44,13 +44,12 @@
     }
    ],
    "source": [
-    "#url = \"http://data.rcc-acis.org/MultiStnData?county=27053,27037,27019,27139,27123,27163,27003&sdate=2021-01-01&edate=2021-12-31&meta=name,state,sids,sid_dates,ll,elev,uid,county,climdiv,valid_daterange&elems=maxt,mint,pcpn&output=json\"\n",
-    "# Fully county list = 27053,27037,27019,27139,27123,27163,27003\n",
-    "\n",
     "if userInput == \"ALL\":\n",
+    "    # This is the Twin Cities of Minnesota 7-county metro\n",
     "    counties = \"27053,27037,27019,27139,27123,27163,27003\"\n",
     "    sdate = \"2002-01-01\"\n",
     "else:\n",
+    "    # 2 counties in the metro and only back to 2020 for the data pull for a test dataset\n",
     "    counties = \"27053,27037\"\n",
     "    sdate = \"2020-01-01\"\n",
     "\n",
