updated lat/long parsing

--- a/scripts/parse_json_file.ipynb
+++ b/scripts/parse_json_file.ipynb
@@ -44,9 +44,7 @@
     "\n",
     "#Parameter File\n",
     "params_file = f'../{file_dir}/params_list.json'\n",
-    "\n",
-    "# #County File - this is a file downloaded from this government site - https://www2.census.gov/geo/docs/reference/codes/files/st27_mn_cou.txt\n",
-    "# county_file = f'../{file_dir}/mn_county_ref.csv'"
+    "\n"
    ]
   },
   {
@@ -63,9 +61,7 @@
     "# open the API params file\n",
     "with open(f'{params_file}', mode='r') as file:\n",
     "    params_data = json.load(file)  # Load the file into a list of Dictionaries NOT RIGHT TO JSON\n",
-    "\n",
-    "# # open the MN county reference\n",
-    "# county_df = pd.read_csv(county_file)\n"
+    "\n"
    ]
   },
   {
@@ -233,7 +229,7 @@
    "outputs": [],
    "source": [
     "# split the ll list into Latitude and longitude \n",
-    "split_df = pd.DataFrame(stations_df['ll'].to_list(), columns = ['latitude','longitude'])\n",
+    "split_df = pd.DataFrame(stations_df['ll'].to_list(), columns = ['longitude','latitude'])\n",
     "# concat df and split_df\n",
     "stations_df = pd.concat([stations_df, split_df], axis=1)\n",
     "# Drop ll column.\n",
